# PolygonFit

./: CMakeLists.txt  README.md
src/: line.cpp  line.h  main.cpp  misc.cpp  misc.h  polygon_fit.cpp  polygon_fit.h
